--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
-* {
-padding: 0;
-margin: 0
+.app {
+display: flex;
+height: 100vh;
+width: 100%;
+overflow: hidden;
+background: var(--black);
+color: var(--white);
 }
