--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,47 @@
 display: flex;
 height: 100vh;
 width: 100%;
-overflow: hidden;
 background: var(--black);
 color: var(--white);
+}
+
+ input,  button {
+background: none;
+border: none;
+color: var(--white);
+font-weight: 700;
+}
+ input {
+padding: 0.5rem 1rem;
+font-size: 1.15rem;
+background: var(--black-15);
+max-width: 20rem;
+border-radius: 0.5rem;
+box-shadow: 0 0.5rem 0.5rem var(--black-05), 0 0 0 2px var(--white-15);
+transition: all 0.2s;
+}
+input:hover {
+box-shadow: 0 0.5rem 0.5rem var(--black-15), 0 0 0 2px var(--white-50);
+}
+ input:focus {
+box-shadow: inset 0 0 0.5rem var(--black-15), 0 0 0 2px var(--green);
+outline: none;
+}
+ input::placeholder {
+color: var(--white-50);
+}
+ button {
+background-color: var(--green);
+margin-left: auto;
+padding: 0.625rem 1.25rem;
+border-radius: 0.5rem;
+text-transform: uppercase;
+transition: all 0.2s;
+}
+button:hover {
+box-shadow: 0 0.5rem 1.25rem -0.25rem var(--black-50);
+filter: brightness(95%);
+}
+button:focus {
+outline: none;
 }
