--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -1,4 +1,10 @@
 .register {
+width: 100%;
+height: 100%;
+position: relative;
+overflow: scroll;
+}
+.register__inner {
 max-width: 1280px;
 width: 100%;
 margin: 0 auto;
