--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -1,12 +1,17 @@
 .register {
 width: 100%;
-height: 100%;
 position: relative;
-overflow: scroll;
+}
+.register__background {
+width: 100vw;
+height: 100vh;
+position: absolute;
 }
 .register__inner {
 max-width: 1280px;
 width: 100%;
+height: 100vh;
+overflow: scroll;
 margin: 0 auto;
 display: flex;
 align-items: center;
