--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -1,17 +1,20 @@
 .register {
 width: 100%;
+height: 100%;
+overflow: scroll;
 position: relative;
 }
 .register__background {
 width: 100vw;
 height: 100vh;
 position: absolute;
+top: 0;
+left: 0;
+z-index: 1;
 }
 .register__inner {
 max-width: 1280px;
 width: 100%;
-height: 100vh;
-overflow: scroll;
 margin: 0 auto;
 display: flex;
 align-items: center;
