--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ background: none;
 border: none;
 color: var(--white);
 font-weight: 700;
+font-family: "Nunito Sans", sans-serif;
 }
  input {
 padding: 0.5rem 1rem;
@@ -30,6 +31,7 @@ outline: none;
 }
  input::placeholder {
 color: var(--white-50);
+font-weight: 600;
 }
  button {
 background-color: var(--green);
