--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -25,9 +25,10 @@ display: flex;
 align-items: center;
 }
 .ck_logo {
-height: 2rem;
+height: 1.75rem;
 width: auto;
 margin-bottom: 0.5rem;
+display: block;
 }
 .register .register__right {
 margin: 3rem 3rem 3rem 0;
@@ -46,6 +47,7 @@ flex-direction: column;
 justify-content: space-between;
 align-self: flex-start;
 padding: 3rem;
+padding-top: 6rem;
 }
 .input__field {
 display: flex;
