--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -25,10 +25,19 @@ display: flex;
 align-items: center;
 }
 .ck_logo {
-height: 1.75rem;
-width: auto;
-margin-bottom: 0.5rem;
+display: flex;
+align-items: center;
+}
+.ck_logo span {
+line-height: 1.2;
 display: block;
+margin: 0;
+padding: 0;
+}
+.ck_logo img {
+height: 2rem;
+width: auto;
+margin-right: 0.5rem;
 }
 .register .register__right {
 margin: 3rem 3rem 3rem 0;
