--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -66,10 +66,13 @@ margin-bottom: 2rem;
 .input__field.password {
 position: relative;
 }
+.input__field.password input {
+padding-right: 3rem;
+}
 .input__field .input__icon {
 position: absolute;
-bottom: 0.75rem;
-right: 0.25rem;
+bottom: 0.625rem;
+right: 1rem;
 }
 .input__field label {
 margin-bottom: 0.5rem;
