--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,10 +1,11 @@
 .modal {
-max-width: 540px;
+max-width: 480px;
 width: 50%;
 padding: 2rem;
 box-shadow: 0 1rem 1rem var(--black-50);
 border-radius: 0.5rem;
-background: var(--gray);
+background: var(--white);
+color: var(--black);
 position: fixed;
 z-index: 9;
 right: 3rem;
@@ -12,7 +13,7 @@ bottom: 3rem;
 }
 
 .modal__header {
-margin-bottom: 1.5rem;
+margin-bottom: 1rem;
 display: flex;
 justify-content: space-between;
 align-items: center;
