--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,22 @@ button:disabled {
 opacity: 0.75;
 filter: brightness(75%);
 }
+
+.intro__video {
+opacity: 1;
+width: 100vw;
+height: 100vh;
+position: absolute;
+top: 0;
+left: 0;
+z-index: 2;
+}
+.intro__video video {
+object-fit: cover;
+width: 100%;
+height: 100%;
+}
+.intro__video.fadeOut {
+opacity: 0;
+transition: opacity 1s;
+}
