--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -39,6 +39,9 @@ margin-left: 1rem;
 background: var(--black-15);
 transition: all 0.2s;
 }
+.footer button svg {
+font-size: 1.5rem !important;
+}
 .footer__buttons button:hover{
 background: var(--green);
 transform: scale(1.15);
