--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -47,6 +47,7 @@ place-items: center;
 margin-left: 1rem;
 background: var(--black-15);
 transition: all 0.2s;
+padding: none;
 }
 .footer button svg {
 font-size: 1.5rem !important;
