--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -25,7 +25,7 @@ margin-right: 1rem;
 transition: all 0.2s;
 }
 .footer__refresh:hover {
-box-shadow: 0 0.15rem 0.25rem var(--black-50);
+box-shadow: 0 0.25rem 0.5rem var(--black-50);
 }
 .footer__refresh svg {
 margin-right: 0.5rem;
@@ -47,7 +47,7 @@ place-items: center;
 margin-left: 1rem;
 background: var(--black-15);
 transition: all 0.2s;
-padding: none;
+padding: 0;
 }
 .footer button svg {
 font-size: 1.5rem !important;
