--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -25,7 +25,7 @@ margin-right: 1rem;
 transition: all 0.2s;
 }
 .footer__refresh:hover {
-box-shadow: 0 0.25rem 0.5rem var(--black-50);
+box-shadow: 0 0 0 2px var(--green);
 }
 .footer__refresh svg {
 margin-right: 0.5rem;
@@ -68,12 +68,14 @@ flex: auto;
 }
 .footer .MuiLinearProgress-root {
 flex: auto;
-border-radius: 99px;
+border-radius: 10px;
 height: 6px;
-background-color: var(--black-50) !important;
+background-color: var(--black-15) !important;
+box-shadow: 0 0.25rem 0.5rem -0.15rem var(--black-50);
 }
 .footer .MuiLinearProgress-bar {
 background-color: var(--green) !important;
+border-radius: 10px;
 }
 .footer__clock {
 margin: 1rem;
