--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -11,10 +11,17 @@ padding-bottom: var(--footer);
 }
 .sidebar__info {
 opacity: 0.25;
-padding-bottom: 2rem;
+padding: 2rem 0;
 position: relative;
-bottom: 0;
-margin-top: auto;
+}
+.sidebar__info::before {
+content: '';
+position: absolute;
+width: 100%;
+height: 1px;
+background: var(--white-50);
+top: -1rem;
+left: 0;
 }
 .sidebar__levels {
 padding: 2rem 0;
@@ -63,4 +70,21 @@ height: 2rem;
 margin-left: -2px;
 width: auto;
 align-self: flex-start;
+}
+.sidebar__hints {
+margin-top: auto;
+padding-bottom: 2rem;
+}
+.sidebar__hints p {
+opacity: 0.5;
+}
+sidebar__hintsImg {
+display: flex;
+align-items: center;
+}
+.sidebar__hintsImg img {
+flex: 1;
+}
+.sidebar__hintsImg img.hintUsed {
+opacity: 0.5;
 }
