--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -86,10 +86,10 @@ justify-content: center;
 align-items: center;
 }
 .sidebar__hintsImg img {
-width: 30%;
-max-width: 4.5rem;
-margin: 0 0.75rem;
+width: 2.5rem;
+margin: 0 1rem;
 height: auto;
+display: block;
 }
 .sidebar__hintsImg img.hintUsed {
 opacity: 0.25;
