--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -86,21 +86,15 @@ justify-content: center;
 align-items: center;
 }
 .sidebar__hintsImg img {
-width: 2.5rem;
-margin: 0 1rem;
-height: 2.5rem;
+width: 3.5rem;
+height: 3.5rem;
+padding: 0.5rem;
+border-radius: 99px;
+background: var(--gray);
+box-shadow: inset 0 -0.25rem 0.75rem var(--black-15);
+margin: 0 0.75rem;
 display: block;
 position: relative;
-}
-.sidebar__hintsImg img::before {
-position: absolute;
-width: 4rem;
-height: 4rem;
-content: '';
-background: var(--black-50);
-left: 0.25rem;
-top: -0.75rem;
-border-radius: 99px;
 }
 .sidebar__hintsImg img.hintUsed {
 opacity: 0.25;
