--- a/src/components/Leaderboard.css
+++ b/src/components/Leaderboard.css
@@ -7,19 +7,55 @@ padding: 2rem 1.5rem;
 box-shadow: 0 0 3rem var(--black-50);
 z-index: 2;
 padding-bottom: var(--footer);
-overflow: scroll;
-height: 100vh;
+display: flex;
+flex-direction: column;
 }
+
+.leaderboard__header {
+display: flex;
+border-radius: 0.5rem;
+z-index: 10;
+padding: 1rem;
+background: var(--white-05);
+align-items: center;
+justify-content: space-between;
+margin-bottom: 3rem;
+box-shadow: 0 0.25rem 0.25rem var(--black-15);
+}
+.header__name {
+line-height: 1;
+margin-right: 0.85rem;
+color: var(--white);
+}
+.header__name small {
+display: block;
+padding-bottom: 0.33rem;
+opacity: 0.5;
+font-weight: 700;
+}
+.header__icon img {
+width: 3rem;
+height: 3rem;
+padding: 0.5rem;
+border-radius: 99px;
+box-shadow: 0 0.25rem 0.25rem var(--black-15);
+background: var(--white-05);
+margin-left: auto;
+}
+
 .leaderboard__teams {
-padding: 2rem 0;
+margin: 2rem 0;
+padding: 1rem;
+border-radius: 0.5rem;
+background: var(--white-05);
+box-shadow: 0 0.25rem 0.25rem var(--black-15);
+overflow: scroll;
 }
 .leaderboard__teams li {
 display: flex;
 padding: 0.75rem 1.5rem;
-padding-left: 4.5rem;
+padding-left: 3.5rem;
 align-items: center;
-margin-left: -1.5rem;
-width: calc(100% + 3rem);
 position: relative;
 overflow: hidden;
 transition: all 0.2s;
@@ -53,7 +89,7 @@ padding-right: 1rem;
 .leaderboard__rank {
 position: absolute;
 display: block;
-left: 1.75rem;
+left: 0.75rem;
 font-weight: 800;
 color: var(--white-50);
 width: 2rem;
@@ -78,7 +114,7 @@ width: 1.75rem;
 height: 1.75rem;
 margin-right: 1rem;
 position: absolute;
-left: 1.875rem;
+left: 0.875rem;
 }
 .leaderboard__teams li:nth-of-type(1) svg {
 fill: var(--gold);
