--- a/src/components/Leaderboard.css
+++ b/src/components/Leaderboard.css
@@ -45,7 +45,7 @@ margin-left: auto;
 
 .leaderboard__teams {
 margin: 2rem 0;
-padding: 1rem;
+padding: 0.5rem 0;
 border-radius: 0.5rem;
 background: var(--white-05);
 box-shadow: 0 0.25rem 0.25rem var(--black-15);
@@ -53,7 +53,7 @@ overflow: scroll;
 }
 .leaderboard__teams li {
 display: flex;
-padding: 0.75rem 1.5rem;
+padding: 0.75rem 1rem;
 padding-left: 3.5rem;
 align-items: center;
 position: relative;
