--- a/src/components/Leaderboard.css
+++ b/src/components/Leaderboard.css
@@ -14,7 +14,6 @@ flex-direction: column;
 .leaderboard__header {
 display: flex;
 border-radius: 0.5rem;
-z-index: 10;
 padding: 1rem;
 background: var(--white-05);
 align-items: center;
@@ -44,7 +43,7 @@ margin-left: auto;
 }
 
 .leaderboard__teams {
-margin: 2rem 0;
+margin: 1rem 0 2rem 0;
 padding: 0.5rem 0;
 border-radius: 0.5rem;
 background: var(--white-05);
