--- a/src/components/Quest.css
+++ b/src/components/Quest.css
@@ -3,7 +3,7 @@ width: 100%;
 height: 100%;
 position: relative;
 overflow: scroll;
-background: linear-gradient(to bottom, var(--black-50), var(--black-50)), url(https://picsum.photos/640/360);
+background: linear-gradient(to bottom, var(--black-50), var(--black-50)), url('https://picsum.photos/640/360');
 background-size: cover;
 }
 .quest__box {
