--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ color: var(--white);
 text-decoration: none;
 transition: all 0.2s;
 }
-a:hover, a:focus {
+a.link:hover, a.link:focus {
 color: var(--green);
 text-decoration: underline;
 }
