--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -20,6 +20,7 @@ height: 100%;
 .login__inner {
 max-width: 1280px;
 width: 100%;
+height: 100vh;
 margin: 0 auto;
 display: flex;
 align-items: center;
