--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -57,10 +57,14 @@ align-self: flex-start;
 padding: 3rem;
 padding-top: 6rem;
 }
-.input__field {
+.login .input__field {
 display: flex;
 flex-direction: column;
-margin-bottom: 2rem;
+margin-bottom: 1rem;
+}
+.input__separator {
+text-align: center;
+margin-bottom: 1rem;
 }
 .input__field.password {
 position: relative;
@@ -91,7 +95,9 @@ margin-bottom: 0;
 margin-bottom: 2rem;
 color: var(--green);
 }
-
+.login input:disabled {
+opacity: 0.5;
+}
 .login button {
 padding: 0.75rem 2rem;
 margin-top: 1rem;
