--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -150,3 +150,13 @@ pointer-events: none;
 .member h3 {
 margin-bottom: 1.5rem;
 }
+
+.team__logo {
+width: 5rem;
+height: 5rem;
+padding: 1rem;
+border-radius: 999px;
+background: var(--white-15);
+box-shadow: 0 0.5rem 1rem var(--black-15);
+margin-bottom: 2rem;
+}
