--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -151,6 +151,9 @@ pointer-events: none;
 margin-bottom: 1.5rem;
 }
 
+.register__participants {
+display: flex;
+}
 .team__logo {
 width: 5rem;
 height: 5rem;
@@ -158,5 +161,5 @@ padding: 1rem;
 border-radius: 999px;
 background: var(--white-15);
 box-shadow: 0 0.5rem 1rem var(--black-15);
-margin-bottom: 2rem;
+margin-right: 1.5rem;
 }
