--- a/src/components/Quest.css
+++ b/src/components/Quest.css
@@ -20,15 +20,22 @@ margin-bottom: 3rem;
 border-radius: 0.5rem;
 }
 .quest__hint {
-padding: 0.5rem;
+padding: 0.25rem 1rem;
 background: var(--white-15);
 border-radius: 0.5rem;
 box-shadow: 0 0.25rem 0.5rem var(--black-15);
 margin-top: 1rem;
 width: fit-content;
+display: flex;
+align-items: center;
+}
+.quest__hint img {
+height: 1.5rem;
+width: auto;
+margin-right: 0.5rem;
 }
 .quest__question {
-font-weight: 500;
+font-weight: 600;
 font-size: 1.15rem;
 }
 .quest__answer {
