--- a/src/components/Quest.css
+++ b/src/components/Quest.css
@@ -20,7 +20,7 @@ margin-bottom: 3rem;
 border-radius: 0.5rem;
 }
 .quest__hint {
-padding: 0.25rem 1rem;
+padding: 0.25rem 1rem 0.25rem 0.25rem;
 background: var(--white-15);
 border-radius: 0.5rem;
 box-shadow: 0 0.25rem 0.5rem var(--black-15);
@@ -30,7 +30,7 @@ display: flex;
 align-items: center;
 }
 .quest__hint img {
-height: 1.5rem;
+height: 2.5rem;
 width: auto;
 margin-right: 0.5rem;
 }
