--- a/src/components/Quest.css
+++ b/src/components/Quest.css
@@ -20,7 +20,7 @@ margin-bottom: 3rem;
 border-radius: 0.5rem;
 }
 .quest__hint {
-padding: 0.5rem 1rem;
+padding: 0.5rem 1rem 0.5rem 0.75rem;
 background: var(--white-15);
 border-radius: 0.5rem;
 box-shadow: 0 0.25rem 0.5rem var(--black-15);
@@ -33,6 +33,7 @@ align-items: center;
 height: 2rem;
 width: auto;
 margin-right: 0.75rem;
+transform: scaleY(0.85);
 }
 .quest__question {
 font-weight: 600;
