--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -85,7 +85,7 @@ margin-top: 2rem;
 justify-content: center;
 align-items: center;
 }
-.sidebar__hintsImg img {
+.sidebar__hintsImg button {
 width: 3.5rem;
 height: 3.5rem;
 padding: 0.66rem;
@@ -93,10 +93,14 @@ border-radius: 99px;
 background: var(--gray);
 box-shadow: inset 0 -0.15rem 0.66rem var(--black-50);
 margin: 0 0.75rem;
-display: block;
-position: relative;
+display: grid;
+place-items: center;
+transition: all 0.2s;
 }
-.sidebar__hintsImg img.hintUsed {
+.sidebar__hintsImg button:not(:disabled):hover {
+transform: scale(1.15);
+}
+.sidebar__hintsImg button:disabled {
 opacity: 0.25;
 box-shadow: inset 0 0.15rem 0.66rem var(--black-50);
 }
