--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -93,9 +93,12 @@ border-radius: 99px;
 background: var(--gray);
 box-shadow: inset 0 -0.15rem 0.66rem var(--black-50);
 margin: 0 0.75rem;
-display: grid;
-place-items: center;
+display: block;
 transition: all 0.2s;
+}
+.sidebar__hintsImg button img {
+width: 100%;
+height: 100%;
 }
 .sidebar__hintsImg button:not(:disabled):hover {
 transform: scale(1.15);
