--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -93,12 +93,13 @@ border-radius: 99px;
 background: var(--gray);
 box-shadow: inset 0 -0.15rem 0.66rem var(--black-50);
 margin: 0 0.75rem;
-display: block;
+display: flex;
+align-items: center;
 transition: all 0.2s;
 }
 .sidebar__hintsImg button img {
 width: 100%;
-height: 100%;
+height: auto;
 }
 .sidebar__hintsImg button:not(:disabled):hover {
 transform: scale(1.15);
