--- a/src/App.css
+++ b/src/App.css
@@ -85,4 +85,9 @@ transition: opacity 1s;
 .Toastify__toast {
 border-radius: 0.5rem;
 padding: 0.5rem;
+opacity: 0.9;
+backdrop-filter: blur(5px);
+}
+.Toastify__progress-bar {
+opacity: 0.25;
 }
