--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,7 @@ width: 400px
 .Toastify__toast {
 border-radius: 0.5rem;
 padding: 0.75rem;
+box-shadow: 0 0.5rem 1rem -0.5rem var(--black-50);
 }
 .Toastify__progress-bar {
 opacity: 0.25;
