--- a/src/components/Quest.css
+++ b/src/components/Quest.css
@@ -19,7 +19,7 @@ bottom: var(--footer);
 margin-bottom: 3rem;
 border-radius: 0.5rem;
 }
-.question img.completed {
+.quest__box img.completed {
 position: absolute;
 right: -2rem;
 bottom: 1rem;
