--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -4,6 +4,10 @@ height: 100%;
 overflow: scroll;
 z-index: 2;
 }
+.login form h2 {
+margin-bottom: 2rem;
+color: var(--green);
+}
 .login__background {
 width: 100vw;
 height: 100vh;
