--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -27,7 +27,8 @@ left: 0;
 padding: 2rem 0;
 flex: 0 0 auto;
 }
-.sidebar__levels a {
+.sidebar__levels a, 
+.sidebar__levels li {
 display: flex;
 padding: 0.75rem 1.5rem;
 align-items: center;
