--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,12 @@ border-radius: 0.5rem;
 padding: 0.75rem;
 box-shadow: 0 0.5rem 1rem -0.5rem var(--black-50);
 }
+.Toastify__toast--success {
+background: var(--green);
+}
+.Toastify__toast--warning {
+background: var(--gold);
+}
 .Toastify__progress-bar {
 opacity: 0.25;
 height: 2px;
