--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ border-radius: 0.5rem;
 text-transform: uppercase;
 transition: all 0.2s;
 font-weight: 700;
+white-space: nowrap;
 }
 button:hover {
 box-shadow: 0 0.5rem 1.25rem -0.25rem var(--black-50);
