--- a/src/components/Unsupported.css
+++ b/src/components/Unsupported.css
@@ -3,6 +3,7 @@ background: var(--white);
 width: 100vw;
 height: 100vh;
 display: flex;
+flex-direction: column;
 align-items: center;
 justify-content: center;
 padding: 3rem;
