--- a/src/components/Unsupported.css
+++ b/src/components/Unsupported.css
@@ -7,6 +7,7 @@ flex-direction: column;
 align-items: center;
 justify-content: center;
 padding: 3rem;
+text-align: center;
 }
 .unsupported img {
 width: 80%;
