--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -8,6 +8,7 @@ z-index: 2;
 display: flex;
 flex-direction: column;
 padding-bottom: var(--footer);
+overflow: scroll;
 }
 .sidebar__info {
 opacity: 0.25;
