--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ a {
 color: var(--white);
 text-decoration: none;
 transition: all 0.2s;
+user-select: none;
 }
 a.link:hover, a.link:focus {
 color: var(--green);
@@ -51,6 +52,7 @@ text-transform: uppercase;
 transition: all 0.2s;
 font-weight: 700;
 white-space: nowrap;
+user-select: none;
 }
 button:hover {
 box-shadow: 0 0.5rem 1.25rem -0.25rem var(--black-50);
