--- a/src/components/Leaderboard.css
+++ b/src/components/Leaderboard.css
@@ -77,6 +77,7 @@ border-radius: 0.5rem;
 background: var(--white-05);
 box-shadow: 0 0.25rem 0.25rem var(--black-15);
 overflow: scroll;
+user-select: none;
 }
 .leaderboard__teams li {
 display: flex;
