--- a/src/components/LevelCompleted.css
+++ b/src/components/LevelCompleted.css
@@ -22,6 +22,10 @@ font-weight: 800;
 color: var(--green);
 text-align: center;
 }
+.levelCompleted h4 {
+margin: 1rem 0;
+color: var(--green);
+}
 .levelCompleted p {
 color: var(--black);
 margin-bottom: 2rem;
