--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -69,6 +69,7 @@ margin-bottom: 1rem;
 .input__separator {
 text-align: center;
 margin-bottom: 1rem;
+max-width: 20rem;
 }
 .input__field.password {
 position: relative;
