--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -70,7 +70,7 @@ margin-bottom: 1rem;
 text-align: center;
 margin-bottom: 1rem;
 }
-.login * {
+.login form * {
 max-width: 20rem;
 }
 .input__field.password {
