--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -49,7 +49,7 @@ backdrop-filter: blur(10px);
 bottom: var(--footer);
 border-radius: 0.5rem;
 background: var(--white-15);
-flex: 0 0 60%;
+flex: 0 0 auto;
 width: fit-content;
 }
 .login .login__left {
