--- a/src/components/Countdown.css
+++ b/src/components/Countdown.css
@@ -22,7 +22,7 @@ z-index: 1;
 content: attr(data-text);
 position: absolute;
 padding: 0.5rem;
-background: var(--white-15);
+background: rgba(255,255,255,0.3);
 top: 100%;
 left: 0;
 border-radius: 0 0 0.5rem 0.5rem;
