--- a/src/components/Countdown.css
+++ b/src/components/Countdown.css
@@ -22,7 +22,7 @@ z-index: 1;
 content: attr(data-text);
 position: absolute;
 padding: 0.5rem;
-background: rgba(255,255,255,0.3);
+background: var(--white-15);
 top: 100%;
 left: 0;
 border-radius: 0 0 0.5rem 0.5rem;
@@ -31,5 +31,5 @@ text-align: center;
 font-size: 0.85rem;
 line-height: 1;
 z-index: -1;
-color: var(--green);
+color: rgba(255,255,255,75);
 }
