--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -72,9 +72,9 @@ flex: auto;
 .footer .MuiLinearProgress-root {
 flex: auto;
 border-radius: 10px;
-height: 10px;
-border: 2px solid var(--white-15);
-background-color: var(--black-15) !important;
+height: 12px;
+border: 2px solid #1f1f1f;
+background-color: #1f1f1f !important;
 }
 .footer .MuiLinearProgress-bar {
 background-color: var(--green) !important;
