--- a/src/App.css
+++ b/src/App.css
@@ -86,22 +86,22 @@ transition: opacity 1s;
 }
 
 .videoButtons {
-position: fixed;
+position: absolute;
 width: 100%;
 padding: 3rem;
 display: flex;
-align-items: flex-end;
-place-items: space-between;
+align-items: center;
+justify-content: space-between;
 left: 0;
 bottom: 0;
+z-index: 3;
 }
 .videoButtons span {
 cursor: pointer;
 padding: 0.5rem;
 color: var(--white);
-text-shadow: 0 0.25rem 0.5rem var(--black-15);
-font-size: 1.15rem;
 transition: all 0.2s;
+line-height: 1;
 }
 .videoButtons span:hover {
 transform: scale(1.15);
