--- a/src/components/Quest.css
+++ b/src/components/Quest.css
@@ -19,8 +19,9 @@ width: 100%;
 height: 100%;
 }
 .muteButton {
-width: 2.5rem;
-height: 2.5rem;
+width: 3rem;
+height: 3rem;
+position: absolute;
 display: grid;
 place-items: center;
 background: var(--white-15);
@@ -31,6 +32,10 @@ bottom: var(--footer);
 margin-bottom: 3rem;
 border-radius: 99px;
 z-index: 2;
+}
+.muteButton svg {
+font-size: 1.75rem;
+margin: 0;
 }
 .quest__box {
 position: absolute;
