--- a/src/components/Quest.css
+++ b/src/components/Quest.css
@@ -32,7 +32,26 @@ bottom: var(--footer);
 margin-bottom: 3rem;
 border-radius: 99px;
 z-index: 2;
+animation: muteBtnAnim 2s infinite ease-out;
 }
+@keyframes muteBtnAnim {
+0 {
+transform: scale(1);
+}
+10% {
+transform: scale(1.1);
+}
+20% {
+transform: scale(1);
+}
+30% {
+transform: scale(1.1);
+}
+40%, 100% {
+transform: scale(1);
+}
+}
+
 .muteButton svg {
 font-size: 1.75rem;
 margin: 0;
