--- a/src/components/EventCompleted.css
+++ b/src/components/EventCompleted.css
@@ -59,8 +59,8 @@ font-weight: 600;
 }
 .eventCompleted textarea {
 border: 1rem solid transparent;
-box-shadow: 0 0 0 2px orange, 0 0.5rem 1rem var(--black-15);
-background: var(--white-50);
+box-shadow: 0 0 0 2px var(--white-50), 0 0.5rem 1rem var(--black-15);
+background: rgba(0,0,0,0.25);
 backdrop-filter: blur(5px);
 border-radius: 0.5rem;
 line-height: 1.5;
@@ -70,12 +70,14 @@ resize: none;
 font-family: 'Nunito Sans';
 font-size: 1.05rem;
 transition: all 0.2s;
-filter: brightness(110%);
-text-shadow: 0 0.1rem 0.5rem var(--black-50);
+}
+.eventCompleted textarea:hover {
+box-shadow: 0 0 0 2px rgba(255,255,255,0.7), 0 0.5rem 1rem var(--black-15);
 }
 .eventCompleted textarea:focus {
 outline: none;
 box-shadow: 0 0 0 2px white, 0 2rem 3rem -1rem var(--black-50);
+background: rgba(0,0,0,0.45);
 }
 .eventCompleted textarea::placeholder {
 color: white;
@@ -84,9 +86,9 @@ font-weight: 600;
 font-family: 'Nunito Sans';
 }
 .eventCompleted form button {
-background: orange;
-filter: brightness(110%);
+background: rgba(255,255,255,0.5);
 font-weight: 600;
+backdrop-filter: blur(5px);
 margin: 1rem 0 1rem auto;
 }
 .eventCompleted form button:hover {
