--- a/src/components/EventCompleted.css
+++ b/src/components/EventCompleted.css
@@ -13,6 +13,9 @@ justify-content: center;
 text-align: center;
 padding: 3rem;
 }
+.eventCompleted a {
+text-decoration: underline;
+}
 .eventCompleted h1 {
 font-weight: 900;
 font-size: 4rem;
